# drf-template

./: .env.example  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: linters.yml  tests.yml
nginx/: nginx.conf
scripts/: startup.dev.sh  startup.sh
service/: celery.py  settings.py  urls.py
